[package]
name = "acousticdi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Audio processing libraries
dasp = { version = "0.11.0", features = ["signal"] }
hound = "3.4.0"
cpal = "0.15"
ruststft = "*"

# async runtimr
tokio = {version = "1", features = ["full"]}

# extra utility for quality of life
once_cell = "1.18.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

